--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sample</title>
+    <title>岩井のBlog</title>
     <%= csrf_meta_tags %>
-
+　　<meta name="viewport" content="width=device-width">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+  
+      <%= yield %>
+    </div> 
+    
+      <footer>
+        <p>運営会社DIVE INTO CODE株式会社</p>
+        <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+      </footer>
+
   </body>
 </html>
