--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,13 @@
     <div class="container">
   
       <%= yield %>
-    </div> 
+
     
       <footer>
-        <p>運営会社DIVE INTO CODE株式会社</p>
-        <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
+        <p>DIC受講生</p>
+        <p>岩井　拓弥</p>
       </footer>
+    </div> 
 
   </body>
 </html>
