--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,9 @@
 <h1>岩井のBlogs</h1>
 
 <div class="container">
-  <%= image_tag('shakehand.png', size: '980x400') %>
+  
+  <p class="img">
+  <%= image_tag('shakehand.png', size: '980x400') %></p>
   <div id="new-blog-link">
     <%= link_to '新規ブログを作成する', new_blog_path %>
   </div>
