--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -32,6 +32,7 @@ footer {
   background-color:#2c3e50;
   padding: 20px 0 10px 0;
   color: white;
+  margin: auto;
   padding-bottom: 10px;
   font-size: 12px;
   bottom: 0;
@@ -47,3 +48,9 @@ body {
   text-align: center;
   background-color: #f5f5f5;
 }
+
+.img img{
+  width: 100%;  
+  height: 100%;
+}
+
