--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<h1>岩井のBlogs</h1>
+<h1>Blogs</h1>
 
 <div class="container">
   
@@ -13,12 +13,31 @@
       <div class="col-xs-12 col-md-6 blog-panel">
         <h2><%= blog.title %></h2>
         <p><%= blog.content %></p>
-        <div class="blog-links">
-          <%= link_to 'Show', blog, class: 'btn btn-default' %>
-          <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %> |
-          <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+          <div class="blog-links">
+            <%= link_to 'Show', blog, class: 'btn btn-default' %>
+            
+            <% if current_user.id == blog.user.id %>
+              <%= link_to 'Edit', edit_blog_path(blog), class: 'btn btn-info' %> |
+              <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+            <% end %>
         </div>
       </div>
     <% end %>
   </div>
 </div>
+
+  <h1>
+    お気に入りのブログ
+  </h1>
+
+  <div class="row">
+    <% @favorite_blogs.each do |blog| %>
+      <div class="col-xs-12 col-md-6 blog-panel">
+        <h2><%= blog.title %></h2>
+        <p><%= blog.content %></p>
+        <div class="blog-links">
+          <%= link_to 'Show', blog, class: 'btn btn-default' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
